_static/app/weak-formulation/main.css
@media (prefers-color-scheme: dark) {
  body{
    color:hsla(0,0%,100%,0.8509803921568627);
    background-color: #131416;
  }
  div.app-weak-formulation svg text{
    fill:white;
  }
  div.app-weak-formulation svg .gamma{
    stroke: ghostwhite;
  }
}

@media (prefers-color-scheme: light) {
  div.app-weak-formulation svg .gamma{
    stroke: black;
  }
  body{
    color:black;
  }
}
body{
  max-width:810px;
  margin:auto;
  border:solid 1px;
  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;
}

div.app-weak-formulation{
  margin:auto;
  width:100%;
/*  width: max-content;*/
/*  max-width:500px;*/
}

div.app-weak-formulation{
 text-align:center;
}


div.flex-container{
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
}

div.app-weak-formulation svg{
  max-width: 250px;
  margin:auto;
  display:block;
}

div.app-weak-formulation div.item.pde{
  max-width:480px;
}

div.app-weak-formulation table.pde{
  margin:auto;
  border-left: solid red 5px;
}

div.app-weak-formulation table.pde tr td{
  text-align:center;
}

div.app-weak-formulation svg line{
  stroke-width:2px;
}


div.app-weak-formulation table.pde tr td.first_row{
  width:70px;
}
div.app-weak-formulation .mass{
  background-color : #e3edf6;
  color:black;
}
div.app-weak-formulation .rigidity{
  background-color : #F6ECE3;
  color:black;
}
div.app-weak-formulation .rhs{
  background-color : #F6E3F6;
  color:black;
}
div.app-weak-formulation .neumann{
  background-color : lightgoldenrodyellow;
  color:black;
}
div.app-weak-formulation svg .neumann{
  stroke: lightgoldenrodyellow;
}
div.app-weak-formulation .fourier{
  background-color : #e8e3f6;
  color:black;
}
div.app-weak-formulation svg .fourier{
  stroke : #e8e3f6;
  color:black;
}
div.app-weak-formulation .dirichlet{
  background-color : #E3F6E3;
  color:black;
}
div.app-weak-formulation svg .dirichlet{
  stroke : #E3F6E3;
}

p#dirichlet-extension{
  margin-left:10px;
  border-bottom:#E3F6E3 4px solid;
  border-left:#E3F6E3 4px solid;
  width: max-content;
  margin:auto;
  margin-top:10px;
}

div.app-weak-formulation  div#wf,
div.app-weak-formulation  div#ls{
  width: 100%;
}

div.app-weak-formulation .ls-compo,
div.app-weak-formulation .wf-compo{
  padding:5px;
}

div.app-weak-formulation div#ls ul{
  text-align:left;
}

